inventory adjustment and payment has done
